# svelte_-learning

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_create_users.sql  002_create_sessions.sql  003_create_articles.sql  004_create_books.sql  005_add_session_indexes.sql
backend/src/: config.rs  db.rs  main.rs
backend/src/auth/: session.rs
backend/src/middleware/: auth.rs
backend/src/models/: article.rs  book.rs  mod.rs  session.rs  user.rs
backend/src/routes/: articles.rs  auth.rs  books.rs  mod.rs
backend/src/routes/admin/: articles.rs  books.rs  mod.rs  upload.rs
backend/src/utils/: markdown.rs  mod.rs  password.rs  slug.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: hooks.server.ts
frontend/src/lib/: api.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/about/: +page.svelte
frontend/src/routes/admin/: +layout.server.ts  +layout.ts
frontend/src/routes/admin/articles/: +page.svelte
frontend/src/routes/admin/books/: +page.svelte
frontend/src/routes/admin/dashboard/: +page.svelte
frontend/src/routes/admin/login/: +page.svelte
frontend/src/routes/articles/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/articles/[slug]/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/books/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/books/[slug]/: +page.server.ts  +page.svelte  +page.ts
