[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros", "uuid", "time"] }
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.15"
dotenv = "0.15"
pulldown-cmark = "0.11"
ammonia = "3"
aws-sdk-s3 = "1"
aws-config = "1"
time = { version = "0.3", features = ["serde"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
axum-extra = { version = "0.9", features = ["typed-header"] }
governor = "0.6"
